--- a/frontend/FishMaster/src/components/common/card/card.scss
+++ b/frontend/FishMaster/src/components/common/card/card.scss
@@ -10,6 +10,21 @@ $card-shadow:
   0 8px 16px $shadow-color-3;
 
 $card-radius: 1px;
+.fish-master-card {
+  position: relative;
+  padding: 20px;
+  background-color: #f5efd3;
+  border-radius: 12px;
+
+  .card-number {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #333;
+  }
+}
 
 .fish-master-card {
   background-color: $card-bg-color;
@@ -17,7 +32,6 @@ $card-radius: 1px;
   box-shadow: $card-shadow;
   
   border: 1px solid rgba(0, 0, 0, 0.15);
-  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,13 +39,13 @@ $card-radius: 1px;
   height: fit-content;
   min-height: unset;
   
-  width: 1000px;
+  width: 814px;
   
   padding: 40px;
   box-sizing: border-box;
   margin: 2rem auto;
   
-  transition: all 0.3s ease;
+  transition: all 0.8s ease;
   
   &:hover {
     box-shadow: 
