--- a/frontend/FishMaster/src/components/common/nav/ScrollProgress.scss
+++ b/frontend/FishMaster/src/components/common/nav/ScrollProgress.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   z-index: 3000;
-  padding: 12px 20px;
+  padding: 12px ;
   display: flex;
   justify-content: center;
   align-items: center;
