--- a/frontend/FishMaster/src/components/common/button/Button.module.scss
+++ b/frontend/FishMaster/src/components/common/button/Button.module.scss
@@ -1,7 +1,7 @@
-@use '../../../styles/variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
 .button {
+  animation: pencilMorph 7s infinite;
   background: #CCC20C;
   border: none;
 
@@ -15,29 +15,28 @@
   cursor: pointer;
 
   letter-spacing: 1.5px; 
-  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.2);
 
   transition: 
-    transform 0.2s ease,
-    box-shadow 0.2s ease,
-    background-color 0.2s ease;
+    transform 0.10s ease,
+    background-color 0.10s ease;
+ 
 
   &:hover:not(:disabled) {
-    transform: translateY(-2px); 
-    box-shadow: 0 10px 22px rgba(0, 0, 0, 0.25);
-    background-color: #d4cc15;
+    transition: 
+    transform 1s ease,
+    background-color 1s ease;
+    transform: translateY(-5px); 
+    background-color: #cc8800;
   }
 
   &:active:not(:disabled) {
-    transform: translateY(0);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: 
+    transform 0.10s ease,
+    background-color 1s ease;
+    transform: translateY(3px);
+
   }
 
-  &:disabled {
-    opacity: 0.45;
-    cursor: not-allowed;
-    box-shadow: none;
-  }
 }
 
 
@@ -83,5 +82,19 @@
   
   &:hover {
     background: #5ed9d0;
+  }
+}
+@keyframes pencilMorph {
+  0% {
+    border-radius: 255px 15px 225px 15px / 15px 225px 15px 255px;
+  }
+  33% {
+    border-radius: 15px 225px 15px 255px / 255px 15px 225px 15px;
+  }
+  66% {
+    border-radius: 200px 300px 200px 30px / 30px 200px 30px 200px;
+  }
+  100% {
+    border-radius: 255px 15px 225px 15px / 15px 225px 15px 255px;
   }
 }
