--- a/frontend/FishMaster/src/components/layout/DashboardLayout.module.scss
+++ b/frontend/FishMaster/src/components/layout/DashboardLayout.module.scss
@@ -20,10 +20,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 200px;
+  height: 122x;
   z-index: 0;
-  opacity: 0.15;
-  pointer-events: none;
+  opacity: 1;
 }
 
 .content {
